# DesafioII_InformaticaII

./: .gitignore  Informe de responsabilidades Desafíos Info II.docx  README.md
desafio2/: CMakeLists.txt  administrador.cpp  administrador.h  alojamiento.cpp  alojamiento.h  anfitrion.cpp  anfitrion.h  huesped.cpp  huesped.h  idManager.cpp  idManager.h  interfaz.cpp  interfaz.h  main.cpp  reserva.cpp  reserva.h  sistema.cpp  sistema.h
desafio2/Data/: Alojamientos.txt  Anfitriones.txt  Huespedes.txt  Reservas_Actuales.txt  Reservas_Historicas.txt
